fixed issue with like button touching stars on the dish page, add photos link now visible

--- a/compass/sass/screen.scss
+++ b/compass/sass/screen.scss
@@ -871,6 +871,7 @@ body.two-col.bp{
                     @include column($content-columns, true);
                     padding-bottom: 9px;
                     padding-right: 16px;
+					margin: 30px auto 0;
 
 
 
@@ -985,6 +986,7 @@ body.two-col.bp{
                 #current_info_wrapper{
                     @include container;
 					padding-bottom:10px;
+					overflow:visible;
                     #img_column{
                         $content-columns: ceil(3);
                         // true means it's the last column in the row
@@ -1626,6 +1628,7 @@ body.two-col.bp{
 .stars_, .stars_0, .stars_0_0 {
     @include sprites(0 -745px);
      width:180px;
+	margin-bottom:10px;
 }
 
 
